# Generated by Django 4.2.16 on 2025-09-08 22:09

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Empresa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cnpj', models.CharField(max_length=18)),
                ('razao_social', models.CharField(max_length=255)),
                ('nome_fantasia', models.CharField(blank=True, max_length=255)),
                ('tipo_empresa', models.CharField(choices=[('MEI', 'Microempreendedor Individual'), ('ME', 'Microempresa'), ('EPP', 'Empresa de Pequeno Porte'), ('LTDA', 'Sociedade Limitada'), ('SA', 'Sociedade Anônima')], max_length=10)),
                ('regime_tributario', models.CharField(choices=[('SIMPLES', 'Simples Nacional'), ('PRESUMIDO', 'Lucro Presumido'), ('REAL', 'Lucro Real')], default='SIMPLES', max_length=10)),
                ('ativa', models.BooleanField(default=True)),
                ('empresa_padrao', models.BooleanField(default=False)),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('atualizado_em', models.DateTimeField(auto_now=True)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='empresas', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Empresa',
                'verbose_name_plural': 'Empresas',
                'db_table': 'empresas',
                'ordering': ['-empresa_padrao', 'razao_social'],
                'unique_together': {('usuario', 'cnpj')},
            },
        ),
    ]
